src/css/style-small.css
html {
  height: 100%;

  /* Prevent zooming of text when rotating to landscape. */
  -webkit-text-size-adjust: 100%; /* iPhone */
}

body {
  font-family: Arial, sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 1.125rem;
  flex-shrink: 0;
}

blockquote {
  margin: 0;
  padding: 10px 0;
}

.info-window-content {
  overflow: auto;
  width: 300px;
}

.info-window-heading {
  font-weight: bold;
}

.info-status {
  color: #ccc;
  margin: 0;
  padding: 10px 0;
}

.filter-menu {
  -webkit-align-content: flex-start; /* Safari 8 */
  align-content: flex-start;
  box-sizing: border-box;
  color: #fff;
  display: -webkit-flex; /* Safari 8 */
  display: flex;
  height: 100%;
  overflow: hidden;
  position: absolute;
  -webkit-transform: translate3d(-215px, 0, 0); /* Safari 8 */
  transform: translate3d(-215px, 0, 0);
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.5, 0, 0.3, 1); /* Safari 8 */
  transition: transform 0.5s cubic-bezier(0.5, 0, 0.3, 1);
}

.open {
  -webkit-transform: translate3d(0, 0, 0); /* Safari 8 */
  transform: translate3d(0, 0, 0);
}

.filter-menu-list-wrapper {
  background-color: #775a8e;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.35);
  box-sizing: border-box;
  display: -webkit-flex; /* Safari 8 */
  display: flex;
  -webkit-flex-direction: column; /* Safari 8 */
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  padding: 10px 10px 0;
  width: 215px;
}

.filter-menu-list {
  border-top: 3px groove #b39ac6;
  box-sizing: border-box;
  height: 100%;
  margin: 0 -10px; /* Left/right margin should be negative of padding in parent */
  overflow-y: auto;
  padding: 0;
}

.filter-menu-list-item {
  border-top: 1px solid #b39ac6;
  cursor: pointer;
  list-style-type: none;
  margin: 0;
  padding: 10px;
}

.selected {
  background-color: rgba(0,0,0,0.5);
}

.filter-menu-list-item:first-child {
  border-top: none;
}

.filter-menu-input {
  box-sizing: border-box;
  margin: 0 0 10px;
  width: 100%;
  flex-shrink: 0;
}

.burger-button-wrapper {
  height: 70px;
  overflow: hidden;
  padding: 10px 10px 10px 0;
  width: 70px;
}

/* CSS-styled burger icon drived from burger icon on Chromecast site
   https://www.google.com/intl/en_us/chromecast/speakers/#?discover */
.burger-button  {
  background: #775a8e;
  border-radius: 0 10px 10px 0;
  border: none;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.35);
  color: #000;
  cursor: pointer;
  display: block;
  height: 30px;
  padding: 25px 20px 15px;
  text-align: center;
  width: 30px;
}

/* Middle line */
.burger-button-div {
  background: #bc93dc;
  display: inline-block;
  height: 3px;
  right: 0;
  top: 0;
  transition: background 0.5s ease;
  vertical-align: middle;
  width: 30px;
}

.burger-button-div.open {
  background: transparent;
}

/* Top line */
.burger-button-div::before {
  background: #bc93dc;
  content: '';
  display: block;
  height: 3px;
  -webkit-transform-origin: 17px 0;
  transform-origin: 17px 0;
  -webkit-transform: translateY(-6px);
  transform: translateY(-6px);
  -webkit-transition: transform 0.5s;
  transition: transform 0.5s;
  width: 30px;
}

.burger-button-div.open::before {
  -webkit-transform: rotate3d(0, 0, 1, 45deg);
  transform: rotate3d(0, 0, 1, 45deg);
}

/* Bottom line */
.burger-button-div::after {
  background: #bc93dc;
  content: '';
  display: block;
  height: 3px;
  -webkit-transform-origin: 9px -1px; /* Safari 8 */
  transform-origin: 9px -1px;
  -webkit-transform: translateY(3px); /* Safari 8 */
  transform: translateY(3px);
  -webkit-transition: -webkit-transform 0.5s; /* Safari 8 */
  transition: transform 0.5s;
  width: 30px;
}

.burger-button-div.open::after {
  -webkit-transform: rotate3d(0, 0, 1, -45deg); /* Safari 8 */
  transform: rotate3d(0, 0, 1, -45deg);
}

#map {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

